[CLEAN] Refactorings in export filter
Some refactorings suggested by SonarLint

Change-Id: I4bc498cd7e344e50705350c426bf0c6014aadaa0
Signed-off-by: Martin Melik Merkumians <melik-merkumians@acin.tuwien.ac.at>