@@ -19,17 +19,17 @@ import java.io.Writer;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.StringTokenizer;
-import java.util.Vector;
 
 import org.eclipse.fordiac.ide.export.ExportFilter.VarDefinition;
-import org.eclipse.fordiac.ide.export.forte1_0_x.ForteExportFilter1_0_x.adapterInstance;
+import org.eclipse.fordiac.ide.export.forte1_0_x.ForteExportFilter1_0_x.AdapterInstance;
 import org.eclipse.fordiac.ide.util.STStringTokenHandling;
 
 public class StructuredTextEmitter {
-	
+
 	private enum Conditionals {
-	     IF, IF_ELSE, CASE, CASE_ELSE
+		IF, IF_ELSE, CASE, CASE_ELSE
 	}
 
 	private boolean inExpression;
@@ -37,25 +37,23 @@ public class StructuredTextEmitter {
 	private PrintWriter pwCPP = null;
 
 	private ForteExportFilter1_0_x exportFilter;
-	
-	private LinkedList<Conditionals> condtionalQueue =  new LinkedList<Conditionals>();
 
-	
-	private static class ForValBuffer{
-		public String forByVal;
-		public String forControlVal;
+	private List<Conditionals> conditionalQueue = new LinkedList<>();
+
+	private static class ForValBuffer {
+		private String forByVal;
+		private String forControlVal;
 	}
 
-	Vector<ForValBuffer> forValBuf = new Vector<ForValBuffer>(); 
-	
+	List<ForValBuffer> forValBuf = new ArrayList<>();
+
 	public StructuredTextEmitter(ForteExportFilter1_0_x exportFilter) {
 		this.exportFilter = exportFilter;
 	}
 
-	public void exportStructuredTextAlgorithm(final String src,
-			final PrintWriter pwCPP) {
+	public void exportStructuredTextAlgorithm(final String src, final PrintWriter pwCPP) {
 		inExpression = false;
-		condtionalQueue.clear();
+		conditionalQueue.clear();
 		this.pwCPP = pwCPP;
 
 		if (null != this.pwCPP) {
@@ -69,12 +67,11 @@ public class StructuredTextEmitter {
 
 	public void exportGuardCondition(final String guard, final PrintWriter pwCPP) {
 		inExpression = true;
-		condtionalQueue.clear();
+		conditionalQueue.clear();
 		this.pwCPP = pwCPP;
 
 		if (null != this.pwCPP) {
-			StringTokenizer t = new StringTokenizer(guard, STStringTokenHandling.stTokenDelimiters,
-					true);
+			StringTokenizer t = new StringTokenizer(guard, STStringTokenHandling.stTokenDelimiters, true);
 			while (t.hasMoreElements()) {
 				String s = t.nextToken();
 				exportSTStatement(s, t);
@@ -89,13 +86,13 @@ public class StructuredTextEmitter {
 		boolean endTag = false;
 		while (!endTag) {
 			do {
-				if(!tokens.hasMoreElements()) {
+				if (!tokens.hasMoreElements()) {
 					return;
 				}
 				var = tokens.nextToken();
 				pwCPP.print(var);
 			} while (!var.equals("*")); //$NON-NLS-1$
-			if(!tokens.hasMoreElements()) {
+			if (!tokens.hasMoreElements()) {
 				return;
 			}
 			var = tokens.nextToken();
@@ -108,8 +105,7 @@ public class StructuredTextEmitter {
 		pwCPP.print("/"); //$NON-NLS-1$
 	}
 
-	private void exportSTStatement(String statement,
-			final StringTokenizer tokens) {
+	private void exportSTStatement(String statement, final StringTokenizer tokens) {
 		String upperStatement = statement.toUpperCase();
 		if (upperStatement.equals("XOR")) { //$NON-NLS-1$
 			pwCPP.print("^"); //$NON-NLS-1$
@@ -132,7 +128,7 @@ public class StructuredTextEmitter {
 			return;
 		}
 		if (statement.equals(":")) { //$NON-NLS-1$
-			if(!tokens.hasMoreElements())
+			if (!tokens.hasMoreElements())
 				return;
 			statement = tokens.nextToken();
 			if (statement.equals("=")) { //$NON-NLS-1$
@@ -143,18 +139,17 @@ public class StructuredTextEmitter {
 			}
 			return;
 		}
-		if(statement.equals(".")){ //$NON-NLS-1$
-			//a dot marks the access of a structure member or in/out puts of adapters
-			//TODO: check for multiple levels!
+		if (statement.equals(".")) { //$NON-NLS-1$
+			// a dot marks the access of a structure member or in/out puts of adapters
+			// TODO: check for multiple levels!
 			pwCPP.print("."); //$NON-NLS-1$
-			if(!tokens.hasMoreElements()) {
+			if (!tokens.hasMoreElements()) {
 				return;
 			}
 			statement = tokens.nextToken();
 			exportSTStatement(statement, tokens);
-			if((!Character.isDigit(statement.codePointAt(0))) && 
-			   (null == exportFilter.getVars().get(statement))){
-				pwCPP.print("()");   // in c++ we have access functions named equaly to the members //$NON-NLS-1$
+			if ((!Character.isDigit(statement.codePointAt(0))) && (null == exportFilter.getVars().get(statement))) {
+				pwCPP.print("()"); // in c++ we have access functions named equaly to the members //$NON-NLS-1$
 			}
 			return;
 		}
@@ -167,7 +162,7 @@ public class StructuredTextEmitter {
 			}
 			return;
 		}
-				
+
 		if (upperStatement.equals("OR")) { //$NON-NLS-1$
 			if (inExpression) {
 				pwCPP.print(") || ("); //$NON-NLS-1$
@@ -177,7 +172,7 @@ public class StructuredTextEmitter {
 			return;
 		}
 		if (statement.equals("<")) { //$NON-NLS-1$
-			if(!tokens.hasMoreElements()) {
+			if (!tokens.hasMoreElements()) {
 				return;
 			}
 			statement = tokens.nextToken();
@@ -192,7 +187,7 @@ public class StructuredTextEmitter {
 			return;
 		}
 		if (statement.equals(">")) { //$NON-NLS-1$
-			if(!tokens.hasMoreElements()) {
+			if (!tokens.hasMoreElements()) {
 				return;
 			}
 			statement = tokens.nextToken();
@@ -224,40 +219,45 @@ public class StructuredTextEmitter {
 
 		if (upperStatement.equals("END_IF")) { //$NON-NLS-1$
 			pwCPP.print("}"); //$NON-NLS-1$
-			if(!condtionalQueue.isEmpty()){
-				Conditionals cond = condtionalQueue.removeLast();
-				if((Conditionals.IF != cond) && (Conditionals.IF_ELSE != cond)){
+			if (!conditionalQueue.isEmpty()) {
+				Conditionals cond = conditionalQueue.get(conditionalQueue.size() - 1);
+				conditionalQueue.remove(conditionalQueue.size() - 1);
+				if ((Conditionals.IF != cond) && (Conditionals.IF_ELSE != cond)) {
 					exportFilter.addErrorMsg("END_IF without corresponding IF statement found!");
 				}
 			} else {
-				exportFilter.addErrorMsg("END_IF without corresponding IF statement found!"); 
+				exportFilter.addErrorMsg("END_IF without corresponding IF statement found!");
 			}
 			return;
 		}
 
-		if (upperStatement.equals("END_FOR")){			 //$NON-NLS-1$
+		if (upperStatement.equals("END_FOR")) { //$NON-NLS-1$
 			exportEndForStatement();
 			return;
 		}
-		
+
 		if (upperStatement.equals("END_WHILE")) { //$NON-NLS-1$
 			pwCPP.print("}"); //$NON-NLS-1$
 			return;
 		}
 		if (upperStatement.equals("ELSE")) { //$NON-NLS-1$
-			Conditionals cond = condtionalQueue.peekLast();
-			
-			if(Conditionals.IF == cond || Conditionals.IF_ELSE == cond){
+			Conditionals cond = conditionalQueue.get(conditionalQueue.size() - 1);
+
+			if (Conditionals.IF == cond || Conditionals.IF_ELSE == cond) {
 				pwCPP.print("}\nelse{"); //$NON-NLS-1$
-				condtionalQueue.removeLast();
-				condtionalQueue.add(Conditionals.IF_ELSE);
-				
-			}else{
-				if(Conditionals.CASE == cond){
+				if (!conditionalQueue.isEmpty()) {
+					conditionalQueue.remove(conditionalQueue.size() - 1);
+				}
+				conditionalQueue.add(Conditionals.IF_ELSE);
+
+			} else {
+				if (Conditionals.CASE == cond) {
 					pwCPP.print(" break;\ndefault: "); //$NON-NLS-1$
-					condtionalQueue.removeLast();
-					condtionalQueue.add(Conditionals.CASE_ELSE);					
-				}else{
+					if (!conditionalQueue.isEmpty()) {
+						conditionalQueue.remove(conditionalQueue.size() - 1);
+					}
+					conditionalQueue.add(Conditionals.CASE_ELSE);
+				} else {
 					exportFilter.addErrorMsg("Else without preceding IF, ELSIF, or CASE statement");
 				}
 			}
@@ -265,19 +265,21 @@ public class StructuredTextEmitter {
 		}
 		if (upperStatement.equals("ELSIF")) { //$NON-NLS-1$
 			inExpression = true;
-			
-			Conditionals cond = condtionalQueue.peekLast();
-			
-			if(Conditionals.IF == cond || Conditionals.IF_ELSE == cond){
+
+			Conditionals cond = conditionalQueue.get(conditionalQueue.size() - 1);
+
+			if (Conditionals.IF == cond || Conditionals.IF_ELSE == cond) {
 				pwCPP.print("}\nelse\n  if(("); //$NON-NLS-1$
-				condtionalQueue.removeLast();
-				condtionalQueue.add(Conditionals.IF_ELSE);				
+				if (!conditionalQueue.isEmpty()) {
+					conditionalQueue.remove(conditionalQueue.size() - 1);
+				}
+				conditionalQueue.add(Conditionals.IF_ELSE);
 			}
 			return;
 		}
 		if (upperStatement.equals("IF")) { //$NON-NLS-1$
 			inExpression = true;
-			condtionalQueue.add(Conditionals.IF);
+			conditionalQueue.add(Conditionals.IF);
 			pwCPP.print("if(("); //$NON-NLS-1$
 			return;
 		}
@@ -319,7 +321,7 @@ public class StructuredTextEmitter {
 			}
 			return;
 		}
-		
+
 		if (upperStatement.equals("VAR")) { //$NON-NLS-1$
 			try {
 				exportLokalVariables(tokens);
@@ -335,7 +337,7 @@ public class StructuredTextEmitter {
 		}
 
 		if (statement.equals("(")) { //$NON-NLS-1$
-			if(!tokens.hasMoreElements()) {
+			if (!tokens.hasMoreElements()) {
 				return;
 			}
 			statement = tokens.nextToken();
@@ -344,49 +346,48 @@ public class StructuredTextEmitter {
 			} else {
 				if (statement.equals(")")) { //$NON-NLS-1$
 					pwCPP.print("()"); //$NON-NLS-1$
-				}
-				else {
+				} else {
 					pwCPP.print("(("); //$NON-NLS-1$
 					exportSTStatement(statement, tokens);
 				}
 			}
 			return;
 		}
-		
-		if(statement.equals(")")){ //$NON-NLS-1$
+
+		if (statement.equals(")")) { //$NON-NLS-1$
 			pwCPP.print("))"); //$NON-NLS-1$
 			return;
 		}
-		
-		if(statement.equals(",")){ //$NON-NLS-1$
+
+		if (statement.equals(",")) { //$NON-NLS-1$
 			pwCPP.print("), ("); //$NON-NLS-1$
 			return;
 		}
 
 		if (statement.equals("/")) { //$NON-NLS-1$
 			pwCPP.print(statement);
-			if(!tokens.hasMoreElements()) {
+			if (!tokens.hasMoreElements()) {
 				return;
 			}
 			statement = tokens.nextToken();
 			if (statement.equals("/")) { //$NON-NLS-1$
 				pwCPP.print("/ "); //$NON-NLS-1$
-				if(!tokens.hasMoreElements()) {
+				if (!tokens.hasMoreElements()) {
 					return;
 				}
 				statement = tokens.nextToken();
 				// print till end of line
 				while (!statement.equals("\n") && !statement.equals("\r")) { //$NON-NLS-1$ //$NON-NLS-2$
 					pwCPP.print(statement);
-					if(!tokens.hasMoreElements())
+					if (!tokens.hasMoreElements())
 						return;
 					statement = tokens.nextToken();
 				}
-				pwCPP.println(""); //issue a new line //$NON-NLS-1$
+				pwCPP.println(""); // issue a new line //$NON-NLS-1$
 			} else {
 				if (statement.equals("*")) { // multi line c-style comment //$NON-NLS-1$
 					pwCPP.print("* "); //$NON-NLS-1$
-					if(!tokens.hasMoreElements()) {
+					if (!tokens.hasMoreElements()) {
 						return;
 					}
 					statement = tokens.nextToken();
@@ -396,13 +397,13 @@ public class StructuredTextEmitter {
 					boolean endTag = false;
 					while (!endTag) {
 						do {
-							if(!tokens.hasMoreElements()) {
+							if (!tokens.hasMoreElements()) {
 								return;
 							}
 							var = tokens.nextToken();
 							pwCPP.print(var);
 						} while (!var.equals("*")); //$NON-NLS-1$
-						if(!tokens.hasMoreElements())
+						if (!tokens.hasMoreElements())
 							return;
 						var = tokens.nextToken();
 						if (var.equals("/")) { //$NON-NLS-1$
@@ -420,7 +421,8 @@ public class StructuredTextEmitter {
 		}
 
 		if (statement.equals("!")) { //$NON-NLS-1$
-			exportFilter.addErrorMsg(" Found wrong statement in ST code: \'!\' Export may not be correct. Please check exported C++ code!"); 
+			exportFilter.addErrorMsg(
+					" Found wrong statement in ST code: \'!\' Export may not be correct. Please check exported C++ code!");
 			pwCPP.print(statement);
 			return;
 		}
@@ -429,12 +431,12 @@ public class StructuredTextEmitter {
 			exportWStringLiteral(tokens);
 			return;
 		}
-		
+
 		if (statement.equals("\'")) { //$NON-NLS-1$
 			exportStringLiteral(tokens);
 			return;
 		}
-		
+
 		if (!statement.equals(" ")) { //$NON-NLS-1$
 			VarDefinition var = exportFilter.getVars().get(statement);
 			// check whether statement is a variable
@@ -445,156 +447,159 @@ public class StructuredTextEmitter {
 //					//TODO: Check!
 //					pwCPP.print("(*((CIEC_" + var.type + "*) " + statement+ "()");
 //				} else {
-					// Variable, but no array. No special treatment necessary
-					pwCPP.print(statement+"()"); //$NON-NLS-1$
+				// Variable, but no array. No special treatment necessary
+				pwCPP.print(statement + "()"); //$NON-NLS-1$
 //				}
 			} else {
-				ArrayList<adapterInstance> myAdapters = exportFilter.getAdapters();
-				boolean isAnAdapter=false;
-				Iterator<adapterInstance> myIter = myAdapters.iterator();
+				List<AdapterInstance> myAdapters = exportFilter.getAdapters();
+				boolean isAnAdapter = false;
+				Iterator<AdapterInstance> myIter = myAdapters.iterator();
 				while (myIter.hasNext()) {
-					adapterInstance myAdapter = myIter.next();
-					if (myAdapter.stName.equals(statement)) {
-						//we have an adapter!
-						isAnAdapter=true;
+					AdapterInstance myAdapter = myIter.next();
+					if (myAdapter.getName().equals(statement)) {
+						// we have an adapter!
+						isAnAdapter = true;
 						break;
 					}
 				}
 				// No special treatment necessary
 				if (isAnAdapter) {
-					pwCPP.print(statement+"()"); //$NON-NLS-1$
+					pwCPP.print(statement + "()"); //$NON-NLS-1$
 				} else {
-					if(statement.contains("#")){ //$NON-NLS-1$
+					if (statement.contains("#")) { //$NON-NLS-1$
 						exportTypedLiteral(statement);
 					} else {
 						// No special treatment necessary
-						pwCPP.print(statement);	
+						pwCPP.print(statement);
 					}
 				}
-				
+
 			}
 		}
 	}
 
 	private void exportTypedLiteral(String statement) {
 		int hashIndex = statement.indexOf('#');
-		
+
 		String prefix = statement.substring(0, hashIndex);
 		statement = statement.substring(hashIndex + 1);
-		
+
 		int type = isTypeName(prefix);
-		if(0 != type){
-			
+		if (0 != type) {
+
 			pwCPP.print("CIEC_" + getDataTypeNameFromPrefix(prefix) + "("); //$NON-NLS-1$ //$NON-NLS-2$
-			if(2 == type){
-				//it is a complex type we will give the string for parsing
-				pwCPP.print("\"" + prefix + "#");	 //$NON-NLS-1$ //$NON-NLS-2$
+			if (2 == type) {
+				// it is a complex type we will give the string for parsing
+				pwCPP.print("\"" + prefix + "#"); //$NON-NLS-1$ //$NON-NLS-2$
 				hashIndex = -1;
-			} else { 
-				//only for simple types we try to find a second #
+			} else {
+				// only for simple types we try to find a second #
 				hashIndex = statement.indexOf('#');
-				if(-1 != hashIndex){
+				if (-1 != hashIndex) {
 					prefix = statement.substring(0, hashIndex);
 					statement = statement.substring(hashIndex + 1);
 				}
 			}
 		}
-		
-		if(-1 != hashIndex){
+
+		if (-1 != hashIndex) {
 			handleLiteralBasePrefix(prefix);
 		}
-		
+
 		pwCPP.print(statement);
-		
-		if(0 != type){
-			if(2 == type){
-				//it is a complex type we will give the string for parsing
-				pwCPP.print("\"");	 //$NON-NLS-1$
+
+		if (0 != type) {
+			if (2 == type) {
+				// it is a complex type we will give the string for parsing
+				pwCPP.print("\""); //$NON-NLS-1$
 			}
-			pwCPP.print(")"); //close the type construction //$NON-NLS-1$
+			pwCPP.print(")"); // close the type construction //$NON-NLS-1$
 		}
-		
+
 	}
-	
-	/* Return the appropiate data type name for a given prefix.
-	 * This function is in charge of handling data type prefix shortcuts, e.g., T#, 
+
+	/*
+	 * Return the appropiate data type name for a given prefix. This function is in
+	 * charge of handling data type prefix shortcuts, e.g., T#,
 	 */
 	private static String getDataTypeNameFromPrefix(String prefix) {
-		if(("t".equals(prefix)) || ("T".equals(prefix))){ //$NON-NLS-1$ //$NON-NLS-2$
+		if (("t".equals(prefix)) || ("T".equals(prefix))) { //$NON-NLS-1$ //$NON-NLS-2$
 			return "TIME"; //$NON-NLS-1$
 		}
-		if(("d".equals(prefix)) || ("D".equals(prefix))){ //$NON-NLS-1$ //$NON-NLS-2$
+		if (("d".equals(prefix)) || ("D".equals(prefix))) { //$NON-NLS-1$ //$NON-NLS-2$
 			return "DATE"; //$NON-NLS-1$
 		}
-		if(("tod".equals(prefix)) || ("TOD".equals(prefix))){ //$NON-NLS-1$ //$NON-NLS-2$
+		if (("tod".equals(prefix)) || ("TOD".equals(prefix))) { //$NON-NLS-1$ //$NON-NLS-2$
 			return "TIME_OF_DAY"; //$NON-NLS-1$
 		}
-		if(("dt".equals(prefix)) || ("DT".equals(prefix))){ //$NON-NLS-1$ //$NON-NLS-2$
+		if (("dt".equals(prefix)) || ("DT".equals(prefix))) { //$NON-NLS-1$ //$NON-NLS-2$
 			return "DATE_AND_TIME"; //$NON-NLS-1$
 		}
 		return prefix;
 	}
 
-	//Dataypes for which we will create correct C litarals
-	private static final String elementaryTypeNames[] = {"BOOL", "SINT", "INT", "DINT", "LINT", "USINT", "UINT", "UDINT", "ULINT", "REAL", "LREAL", "BYTE", "WORD", "DWORD", "LWORD" }; //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$ //$NON-NLS-7$ //$NON-NLS-8$ //$NON-NLS-9$ //$NON-NLS-10$ //$NON-NLS-11$ //$NON-NLS-12$ //$NON-NLS-13$ //$NON-NLS-14$ //$NON-NLS-15$
+	// Dataypes for which we will create correct C litarals
+	private static final String elementaryTypeNames[] = { "BOOL", "SINT", "INT", "DINT", "LINT", "USINT", "UINT", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$ //$NON-NLS-7$
+			"UDINT", "ULINT", "REAL", "LREAL", "BYTE", "WORD", "DWORD", "LWORD" }; //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$ //$NON-NLS-7$ //$NON-NLS-8$
 
 	private static int isTypeName(String prefix) {
 		int retVal = 0;
-		
-		if(!(prefix.startsWith("1") || prefix.startsWith("8") || prefix.startsWith("2"))){ //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+
+		if (!(prefix.startsWith("1") || prefix.startsWith("8") || prefix.startsWith("2"))) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 			for (String typeName : elementaryTypeNames) {
-				if(typeName.equals(prefix)){
+				if (typeName.equals(prefix)) {
 					return 1;
 				}
 			}
 			retVal = 2;
 		}
-		
+
 		return retVal;
 	}
 
 	private void handleLiteralBasePrefix(String prefix) {
-		if(prefix.equals("16")){ //$NON-NLS-1$
+		if (prefix.equals("16")) { //$NON-NLS-1$
 			pwCPP.print("0x"); //$NON-NLS-1$
-		}else if(prefix.equals("8")){ //$NON-NLS-1$
+		} else if (prefix.equals("8")) { //$NON-NLS-1$
 			pwCPP.print("0"); //$NON-NLS-1$
-		}else if(prefix.equals("2")){ //$NON-NLS-1$
+		} else if (prefix.equals("2")) { //$NON-NLS-1$
 			pwCPP.print("0b"); //$NON-NLS-1$
-		}else{
-			exportFilter.addErrorMsg("Wrong literal base prefix provided: " + prefix + "#"); 
+		} else {
+			exportFilter.addErrorMsg("Wrong literal base prefix provided: " + prefix + "#");
 		}
-		
+
 	}
 
-	private void exportLokalVariables(StringTokenizer tokens)  throws StructuredTextException  {
-		
-		while(tokens.hasMoreElements()){
+	private void exportLokalVariables(StringTokenizer tokens) throws StructuredTextException {
+
+		while (tokens.hasMoreElements()) {
 			String token = getNextNoneSpaceToken(tokens);
-			if(token.equals("END_VAR")){ //$NON-NLS-1$
+			if (token.equals("END_VAR")) { //$NON-NLS-1$
 				return;
 			}
-			if(!token.equals("\n")&&!token.equals("\t")&&!token.equals(" ")){ //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+			if (!token.equals("\n") && !token.equals("\t") && !token.equals(" ")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 				String varName = token;
-				
+
 				token = getNextNoneSpaceToken(tokens);
-				if((null != token) && (token.equals(":"))){ //$NON-NLS-1$
+				if ((null != token) && (token.equals(":"))) { //$NON-NLS-1$
 					token = getNextNoneSpaceToken(tokens);
-					
-					if(null != token){
-						if(token.equals("ARRAY")){ //$NON-NLS-1$
+
+					if (null != token) {
+						if (token.equals("ARRAY")) { //$NON-NLS-1$
 							exportLocalArray(varName, tokens);
-						}else{
-							 pwCPP.print("CIEC_" + token + " ");						  //$NON-NLS-1$ //$NON-NLS-2$
-							 pwCPP.print(varName);
-							 handleVarInitialisation(tokens, "");						 //$NON-NLS-1$
-						}						
+						} else {
+							pwCPP.print("CIEC_" + token + " "); //$NON-NLS-1$ //$NON-NLS-2$
+							pwCPP.print(varName);
+							handleVarInitialisation(tokens, ""); //$NON-NLS-1$
+						}
 						pwCPP.println(";"); //$NON-NLS-1$
-						
-					}else{
-						throw new StructuredTextException("Variable declaration is missing the type"); 
+
+					} else {
+						throw new StructuredTextException("Variable declaration is missing the type");
 					}
-				}else{
-					throw new StructuredTextException("Variable declaration is missing the : between var name and type"); 
+				} else {
+					throw new StructuredTextException(
+							"Variable declaration is missing the : between var name and type");
 				}
 			}
 		}
@@ -603,116 +608,118 @@ public class StructuredTextEmitter {
 
 	private void exportLocalArray(String varName, StringTokenizer tokens) throws StructuredTextException {
 		String token = getNextNoneSpaceToken(tokens);
-		if((null != token) && (token.equals("["))){ //$NON-NLS-1$
-			String lower = getNextNoneSpaceToken(tokens);
+		if ((null != token) && (token.equals("["))) { //$NON-NLS-1$
 			token = getNextNoneSpaceToken(tokens);
-			if((null != token) && (token.equals("."))){ //$NON-NLS-1$
-				if(tokens.hasMoreElements() && tokens.nextToken().equals(".")) { //$NON-NLS-1$
+			if ((null != token) && (token.equals("."))) { //$NON-NLS-1$
+				if (tokens.hasMoreElements() && tokens.nextToken().equals(".")) { //$NON-NLS-1$
 					String upper = getNextNoneSpaceToken(tokens);
 					token = getNextNoneSpaceToken(tokens);
-					if((null != token) && (token.equals("]"))){ //$NON-NLS-1$
+					if ((null != token) && (token.equals("]"))) { //$NON-NLS-1$
 						token = getNextNoneSpaceToken(tokens);
-						if((null != token) && (token.equals("OF"))){ //$NON-NLS-1$
+						if ((null != token) && (token.equals("OF"))) { //$NON-NLS-1$
 							token = getNextNoneSpaceToken(tokens);
-							if(null != token){
-								//TODO consider lower range 
-								pwCPP.print("CIEC_ARRAY " + varName + "(" + upper +", g_nStringId" + token +")"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
+							if (null != token) {
+								// TODO consider lower range
+								pwCPP.print("CIEC_ARRAY " + varName + "(" + upper + ", g_nStringId" + token + ")"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
 								handleVarInitialisation(tokens, ".fromString"); //$NON-NLS-1$
 							}
-							
-						}else{
-							throw new StructuredTextException("Array OF missing"); 
+
+						} else {
+							throw new StructuredTextException("Array OF missing");
 						}
-						
-					}else{
-						throw new StructuredTextException("Array size end missing"); 
+
+					} else {
+						throw new StructuredTextException("Array size end missing");
 					}
-				}else{
+				} else {
 					throw new StructuredTextException("Array var range missing ..");
-				}				
-			}else{
-				throw new StructuredTextException("Array var range missing .."); 
-			}			
-		}else{
-			throw new StructuredTextException("Array size start missing"); 
+				}
+			} else {
+				throw new StructuredTextException("Array var range missing ..");
+			}
+		} else {
+			throw new StructuredTextException("Array size start missing");
 		}
 	}
 
 	private static String getNextNoneSpaceToken(StringTokenizer tokens) {
-		while(tokens.hasMoreElements()){
+		while (tokens.hasMoreElements()) {
 			String token = tokens.nextToken();
-			if(!token.equals("\n")&&!token.equals("\t")&&!token.equals(" ")&&!token.equals("\r")){ //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
+			if (!token.equals("\n") && !token.equals("\t") && !token.equals(" ") && !token.equals("\r")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
 				return token;
 			}
 		}
 		return null;
 	}
 
-	private void handleVarInitialisation(StringTokenizer tokens, String initStartCode)  throws StructuredTextException {
+	private void handleVarInitialisation(StringTokenizer tokens, String initStartCode) throws StructuredTextException {
 		String token = getNextNoneSpaceToken(tokens);
-		if(null != token){
-			if(":".equals(tokens.nextToken())){ //$NON-NLS-1$
-				if(tokens.hasMoreElements() && tokens.nextToken().equals("=")){ //$NON-NLS-1$
+		if (null != token) {
+			if (":".equals(tokens.nextToken())) { //$NON-NLS-1$
+				if (tokens.hasMoreElements() && tokens.nextToken().equals("=")) { //$NON-NLS-1$
 					pwCPP.print(initStartCode + "(\""); //$NON-NLS-1$
-				}else{
-					throw new StructuredTextException("VAR initialisation is mising =."); 
+				} else {
+					throw new StructuredTextException("VAR initialisation is mising =.");
 				}
-			
-				while(tokens.hasMoreElements()){
+
+				while (tokens.hasMoreElements()) {
 					token = tokens.nextToken();
-					if(token.equals(";")){ //$NON-NLS-1$
+					if (token.equals(";")) { //$NON-NLS-1$
 						pwCPP.print("\")"); //$NON-NLS-1$
 						return;
-					}					
+					}
 					pwCPP.print(token);
 				}
-			}else{
-				//if we don't have an assignment we need a closing statement
-				if(";".equals(token)){ //$NON-NLS-1$
-					return; 
+			} else {
+				// if we don't have an assignment we need a closing statement
+				if (";".equals(token)) { //$NON-NLS-1$
+					return;
 				}
 			}
 		}
-		
-		throw new StructuredTextException("variable statement not closed with ;."); 
+
+		throw new StructuredTextException("variable statement not closed with ;.");
 	}
 
 	private void exportEndForStatement() {
-		
-		if(!forValBuf.isEmpty()){
-			ForValBuffer forVals = forValBuf.lastElement();
+
+		if (!forValBuf.isEmpty()) {
+			ForValBuffer forVals = forValBuf.get(forValBuf.size() - 1);
 			String strippedForControlVal = forVals.forControlVal.replace("()", "_"); //$NON-NLS-1$ //$NON-NLS-2$
-			
-			pwCPP.println("\n      if(((is" + strippedForControlVal + "Up) && ((" + forVals.forByVal +") > 0)) || "); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-			pwCPP.println("         ((!is" + strippedForControlVal + "Up) && ((" + forVals.forByVal + ") < 0))){");		 //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-			pwCPP.println("        " + forVals.forControlVal + " = " + forVals.forControlVal + " + (" + forVals.forByVal +");"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
+
+			pwCPP.println("\n      if(((is" + strippedForControlVal + "Up) && ((" + forVals.forByVal + ") > 0)) || "); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+			pwCPP.println("         ((!is" + strippedForControlVal + "Up) && ((" + forVals.forByVal + ") < 0))){"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+			pwCPP.println("        " + forVals.forControlVal + " = " + forVals.forControlVal + " + (" + forVals.forByVal //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+					+ ");"); //$NON-NLS-1$
 			pwCPP.println("      }"); //$NON-NLS-1$
 			pwCPP.println("      else{"); //$NON-NLS-1$
-			pwCPP.println("        " + forVals.forControlVal + " = " + forVals.forControlVal + " - (" + forVals.forByVal +");"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
+			pwCPP.println("        " + forVals.forControlVal + " = " + forVals.forControlVal + " - (" + forVals.forByVal //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+					+ ");"); //$NON-NLS-1$
 			pwCPP.println("      }"); //$NON-NLS-1$
 			pwCPP.println("    }"); //$NON-NLS-1$
 			pwCPP.println("  }"); //$NON-NLS-1$
 
 			forValBuf.remove(forVals);
-		}else{
+		} else {
 			exportFilter.addErrorMsg("For loop closed without an according open statement!");
 		}
 	}
 
-	private void  exportWStringLiteral(final StringTokenizer tokens) {
+	private void exportWStringLiteral(final StringTokenizer tokens) {
 		String statement;
 		pwCPP.print("\""); //$NON-NLS-1$
 		do {
 			statement = tokens.nextToken();
-			if(statement.equals("$")){ //$NON-NLS-1$
+			if (statement.equals("$")) { //$NON-NLS-1$
 				statement = tokens.nextToken();
-				if(statement.equals("\"")){ //$NON-NLS-1$
+				if (statement.equals("\"")) { //$NON-NLS-1$
 					pwCPP.print("\\\""); //$NON-NLS-1$
-					statement = "";  //necessary that we don't end the loop as it is a dollar escaped ' it is not the end of the wstring //$NON-NLS-1$
-				}else{
-					//TODO handle dollar escaping
+					statement = ""; // necessary that we don't end the loop as it is a dollar escaped //$NON-NLS-1$
+									// ' it is not the end of the wstring
+				} else {
+					// TODO handle dollar escaping
 				}
-			}else{
+			} else {
 				pwCPP.print(statement);
 			}
 		} while (!statement.equals("\"")); //$NON-NLS-1$
@@ -720,104 +727,111 @@ public class StructuredTextEmitter {
 
 	private void exportStringLiteral(final StringTokenizer tokens) {
 		String statement;
-		
+
 		pwCPP.print("\""); //$NON-NLS-1$
 		do {
-			statement = tokens.nextToken();			
+			statement = tokens.nextToken();
 			if (statement.equals("\"")) { //$NON-NLS-1$
 				pwCPP.print("\\\""); //$NON-NLS-1$
-			} else {				
+			} else {
 				if (statement.equals("'")) { //$NON-NLS-1$
 					pwCPP.print("\""); //$NON-NLS-1$
 				} else {
-					if(statement.equals("$")){ //$NON-NLS-1$
+					if (statement.equals("$")) { //$NON-NLS-1$
 						statement = tokens.nextToken();
-						if(statement.equals("'")){ //$NON-NLS-1$
+						if (statement.equals("'")) { //$NON-NLS-1$
 							pwCPP.print("'"); //$NON-NLS-1$
-							statement = "";  //necessary that we don't end the loop as it is a dollar escaped ' it is not the end of the wstring //$NON-NLS-1$
-						}else{
-							//TODO handle dollar escaping	
+							statement = ""; // necessary that we don't end the loop as it is a dollar //$NON-NLS-1$
+											// escaped ' it is not the end of the wstring
+						} else {
+							// TODO handle dollar escaping
 						}
-					}else{
+					} else {
 						pwCPP.print(statement);
 					}
 				}
 			}
 		} while (!statement.equals("\'")); //$NON-NLS-1$
 	}
-	
 
 	private void exportForStatement(final StringTokenizer tokens) throws StructuredTextException {
-		
+
 		ForValBuffer forVals = new ForValBuffer();
-		
+
 		forVals.forByVal = "1"; //$NON-NLS-1$
-		
+
 		forVals.forControlVal = getForVar(tokens, ":"); //$NON-NLS-1$
-		
+
 		inExpression = true;
-		
+
 		String buf = tokens.nextToken();
-		if((null != buf) && (buf.equals("="))){ //$NON-NLS-1$
+		if ((null != buf) && (buf.equals("="))) { //$NON-NLS-1$
 			String forInitialVal = getForVar(tokens, "TO"); //$NON-NLS-1$
-			
+
 			String forToVal = getForToAndBy(tokens, forVals);
 			String strippedForControlVal = forVals.forControlVal.replace("()", "_"); //$NON-NLS-1$ //$NON-NLS-2$
-			
+
 			pwCPP.println("  {"); //$NON-NLS-1$
 			pwCPP.println("    bool is" + strippedForControlVal + "Up = ((" + forVals.forByVal + ") > 0);"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 			pwCPP.println("    " + forVals.forControlVal + " = " + forInitialVal + ";"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-			pwCPP.println("    while(!(((is" + strippedForControlVal + "Up) && (" + forVals.forControlVal + " > (" + forToVal + "))) ||"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
-			pwCPP.println("            ((!is" + strippedForControlVal + "Up) && (" + forVals.forControlVal + " < (" + forToVal + "))))){"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
-			
+			pwCPP.println("    while(!(((is" + strippedForControlVal + "Up) && (" + forVals.forControlVal + " > (" //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+					+ forToVal + "))) ||"); //$NON-NLS-1$
+			pwCPP.println("            ((!is" + strippedForControlVal + "Up) && (" + forVals.forControlVal + " < (" //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+					+ forToVal + "))))){"); //$NON-NLS-1$
+
 			forValBuf.add(forVals);
-		}else{
-			throw new StructuredTextException("Unexpected end of algorithm in for argument parsing! Expecting '=' statement."); 
+		} else {
+			throw new StructuredTextException(
+					"Unexpected end of algorithm in for argument parsing! Expecting '=' statement.");
 		}
 		inExpression = false;
 	}
 
 	private String getForVar(StringTokenizer tokens, String delim) throws StructuredTextException {
 		Writer result = new StringWriter();
-	    PrintWriter printWriter = new PrintWriter(result);
-	    PrintWriter bufPrintWriter = pwCPP;
-	    pwCPP = printWriter;
-	    
-	    String buf = getNextNoneSpaceToken(tokens);
-	    if(null == buf){
-	    	throw new StructuredTextException("Unexpected end of algorithm in for argument parsing! Expecting variable statement.");
-	    }
-	    
+		PrintWriter printWriter = new PrintWriter(result);
+		PrintWriter bufPrintWriter = pwCPP;
+		pwCPP = printWriter;
+
+		String buf = getNextNoneSpaceToken(tokens);
+		if (null == buf) {
+			throw new StructuredTextException(
+					"Unexpected end of algorithm in for argument parsing! Expecting variable statement.");
+		}
+
 		while (!buf.equalsIgnoreCase(delim)) {
-			exportSTStatement(buf, tokens);			
+			exportSTStatement(buf, tokens);
 			// remove trailing spaces
 			buf = getNextNoneSpaceToken(tokens);
-		    if(null == buf){
-		    	throw new StructuredTextException("Unexpected end of algorithm in for argument parsing! Expecting: " + delim);	
-		    }
+			if (null == buf) {
+				throw new StructuredTextException(
+						"Unexpected end of algorithm in for argument parsing! Expecting: " + delim);
+			}
 		}
-		
+
 		pwCPP = bufPrintWriter;
 		return result.toString();
 	}
-	
+
 	private String getForToAndBy(StringTokenizer tokens, ForValBuffer forVals) throws StructuredTextException {
 		StringWriter result = new StringWriter();
-	    PrintWriter printWriter = new PrintWriter(result);
-	    PrintWriter bufPrintWriter = pwCPP;
-	    pwCPP = printWriter;
-	    
-	    boolean hadBYStatement = false;
-		
-	    if(!tokens.hasMoreTokens()){
-			throw new StructuredTextException("Unexpected end of algorithm in for argument parsing! Expecting DO or BY"); 
+		PrintWriter printWriter = new PrintWriter(result);
+		PrintWriter bufPrintWriter = pwCPP;
+		pwCPP = printWriter;
+
+		boolean hadBYStatement = false;
+
+		if (!tokens.hasMoreTokens()) {
+			throw new StructuredTextException(
+					"Unexpected end of algorithm in for argument parsing! Expecting DO or BY");
 		}
 		String buf = tokens.nextToken();
 		String retval = ""; //$NON-NLS-1$
 		while (!buf.equalsIgnoreCase("DO")) { //$NON-NLS-1$
 			while (buf.equals(" ")) { //$NON-NLS-1$
-				if(!tokens.hasMoreTokens()){
-					throw new StructuredTextException("Unexpected end of algorithm in for argument parsing! Expecting DO or BY"); 
+				if (!tokens.hasMoreTokens()) {
+					throw new StructuredTextException(
+							"Unexpected end of algorithm in for argument parsing! Expecting DO or BY");
 				}
 				buf = tokens.nextToken(); // remove leading spaces
 			}
@@ -828,30 +842,30 @@ public class StructuredTextEmitter {
 				hadBYStatement = true;
 				retval = result.toString();
 				result = new StringWriter();
-			    printWriter = new PrintWriter(result);
-			    pwCPP = printWriter;
+				printWriter = new PrintWriter(result);
+				pwCPP = printWriter;
 			} else {
 				exportSTStatement(buf, tokens); // otherwise we export by also
 			}
-			if(!tokens.hasMoreTokens()){
-				throw new StructuredTextException("Unexpected end of algorithm in for argument parsing! Expecting DO or BY"); 
+			if (!tokens.hasMoreTokens()) {
+				throw new StructuredTextException(
+						"Unexpected end of algorithm in for argument parsing! Expecting DO or BY");
 			}
 			buf = tokens.nextToken();
 		}
 		if (hadBYStatement) {
 			forVals.forByVal = result.toString();
-		}
-		else {
+		} else {
 			retval = result.toString();
 		}
-		
+
 		pwCPP = bufPrintWriter;
-		
+
 		return retval;
 	}
 
 	private void emitCASEStatement(final StringTokenizer tokens) {
-		condtionalQueue.add(Conditionals.CASE);
+		conditionalQueue.add(Conditionals.CASE);
 		boolean caseElementEnded = false;
 		String statement = tokens.nextToken().toUpperCase(), buf = ""; //$NON-NLS-1$
 
@@ -862,7 +876,7 @@ public class StructuredTextEmitter {
 		}
 		pwCPP.print(" ){"); //$NON-NLS-1$
 		boolean first = true;
-		
+
 		statement = tokens.nextToken().toUpperCase();
 		while (true) {
 			while ((!caseElementEnded) && (!statement.equals("END_CASE"))) { //$NON-NLS-1$
@@ -885,8 +899,7 @@ public class StructuredTextEmitter {
 			}
 			int pos = buf.lastIndexOf(';');
 			if (pos != -1) {
-				StringTokenizer t = new StringTokenizer(buf.substring(0, pos),
-						" &():=[]+-*/><;\n\r\t\"\'", true); //$NON-NLS-1$
+				StringTokenizer t = new StringTokenizer(buf.substring(0, pos), " &():=[]+-*/><;\n\r\t\"\'", true); //$NON-NLS-1$
 				while (t.hasMoreElements()) {
 					String s = t.nextToken();
 					exportSTStatement(s, t);
@@ -896,15 +909,14 @@ public class StructuredTextEmitter {
 			if (caseElementEnded) {
 				StringTokenizer t;
 				if (pos != -1) {
-					t = new StringTokenizer(buf.substring(pos),
-							" &():=[]+-*/><;\n\r\t\"\'.,", true); //$NON-NLS-1$
+					t = new StringTokenizer(buf.substring(pos), " &():=[]+-*/><;\n\r\t\"\'.,", true); //$NON-NLS-1$
 				} else {
 					t = new StringTokenizer(buf, " &():=[]+-*/><;\n\r\t\"\'.,", //$NON-NLS-1$
 							true);
 				}
-				if(!first){
+				if (!first) {
 					pwCPP.println("\nbreak;"); //$NON-NLS-1$
-				}else{
+				} else {
 					first = false;
 				}
 				pwCPP.print("\ncase "); //$NON-NLS-1$
@@ -951,21 +963,21 @@ public class StructuredTextEmitter {
 				buf = ""; //$NON-NLS-1$
 
 			} else {
-				if((pos == -1) && (0 != buf.length())){
-					StringTokenizer t = new StringTokenizer(buf,
-							" &():=[]+-*/><;\n\r\t\"\'", true); //$NON-NLS-1$
+				if ((pos == -1) && (0 != buf.length())) {
+					StringTokenizer t = new StringTokenizer(buf, " &():=[]+-*/><;\n\r\t\"\'", true); //$NON-NLS-1$
 					while (t.hasMoreElements()) {
 						String s = t.nextToken();
 						exportSTStatement(s, t);
 
-					}	
+					}
 				}
-				
+
 				// end of the case
 				pwCPP.print("\n }"); //$NON-NLS-1$
-				Conditionals cond = condtionalQueue.removeLast();
-				if((Conditionals.CASE != cond) && (Conditionals.CASE_ELSE != cond)){
-					exportFilter.addErrorMsg("END_CASE without corresponding IF statement found!"); 
+				Conditionals cond = conditionalQueue.get(conditionalQueue.size() - 1);
+				conditionalQueue.remove(conditionalQueue.size() - 1);
+				if ((Conditionals.CASE != cond) && (Conditionals.CASE_ELSE != cond)) {
+					exportFilter.addErrorMsg("END_CASE without corresponding IF statement found!");
 				}
 				return;
 			}
